// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shared/components/SpecialHandling/SpecialHandlingAlert component renders fine 1`] = `
<SpecialHandlingAlert
  customerName="Amy Chen"
  generalAlert="general alert content (staff only)"
  medicalAlert="medical alert content"
  medicalAlertShown={true}
  notes="notes content"
  shown={true}
>
  <Alert
    className="special-handling-alert"
    shown={true}
    title={
      <span>
        <i
          className="icon icon-exclamation-triangle"
        />
         Notes for 
        Amy Chen
      </span>
    }
    type="alert"
  >
    <Modal
      className="modal--alert special-handling-alert"
      onClose={[Function]}
      shown={true}
      title={
        <span>
          <i
            className="icon icon-exclamation-triangle"
          />
           Notes for 
          Amy Chen
        </span>
      }
    >
      <div
        className="modal-wrap"
        role="dialog"
      >
        <div
          className="modal is-open modal--alert special-handling-alert"
          onKeyDown={[Function]}
        >
          <section
            className="modal-box"
          >
            <header
              className="modal-header"
            >
              <h3
                className="modal-title"
              >
                <span>
                  <i
                    className="icon icon-exclamation-triangle"
                  />
                   Notes for 
                  Amy Chen
                </span>
              </h3>
              <span
                aria-label="close-dialog"
                className="icon icon-close modal-close"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              />
            </header>
            <div
              className="modal-body"
            >
              <div
                className="special-handling-alert__content"
              >
                <dl>
                  <dt>
                    Notes
                  </dt>
                  <dd>
                    notes content
                  </dd>
                </dl>
                <dl>
                  <dt>
                    Medical Alert
                  </dt>
                  <dd>
                    medical alert content
                  </dd>
                </dl>
                <dl>
                  <dt>
                    General Alert
                    <span>
                      Staff Use Only
                    </span>
                  </dt>
                  <dd>
                    general alert content (staff only)
                  </dd>
                </dl>
              </div>
            </div>
            <div
              className="modal-footer"
            >
              <Button
                className=""
                loading={false}
                menuData={Array []}
                noSubmit={false}
                onClick={[Function]}
                type="strong"
              >
                <button
                  className="btn btn-strong"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  type="submit"
                >
                  <span>
                    OK
                  </span>
                </button>
              </Button>
            </div>
          </section>
        </div>
        <div
          className="modal-mask"
        />
      </div>
    </Modal>
  </Alert>
</SpecialHandlingAlert>
`;

exports[`shared/components/SpecialHandling/SpecialHandlingAlert component renders fine when no content detail 1`] = `
<SpecialHandlingAlert
  customerName="Amy Chen"
  generalAlert=""
  medicalAlert=""
  medicalAlertShown={true}
  notes=""
  shown={true}
>
  <Alert
    className="special-handling-alert"
    shown={true}
    title={
      <span>
        <i
          className="icon icon-exclamation-triangle"
        />
         Notes for 
        Amy Chen
      </span>
    }
    type="alert"
  >
    <Modal
      className="modal--alert special-handling-alert"
      onClose={[Function]}
      shown={true}
      title={
        <span>
          <i
            className="icon icon-exclamation-triangle"
          />
           Notes for 
          Amy Chen
        </span>
      }
    >
      <div
        className="modal-wrap"
        role="dialog"
      >
        <div
          className="modal is-open modal--alert special-handling-alert"
          onKeyDown={[Function]}
        >
          <section
            className="modal-box"
          >
            <header
              className="modal-header"
            >
              <h3
                className="modal-title"
              >
                <span>
                  <i
                    className="icon icon-exclamation-triangle"
                  />
                   Notes for 
                  Amy Chen
                </span>
              </h3>
              <span
                aria-label="close-dialog"
                className="icon icon-close modal-close"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              />
            </header>
            <div
              className="modal-body"
            >
              <div
                className="special-handling-alert__content"
              >
                <dl>
                  <dt>
                    Notes
                  </dt>
                  <dd>
                    --
                  </dd>
                </dl>
                <dl>
                  <dt>
                    Medical Alert
                  </dt>
                  <dd>
                    --
                  </dd>
                </dl>
                <dl>
                  <dt>
                    General Alert
                    <span>
                      Staff Use Only
                    </span>
                  </dt>
                  <dd>
                    --
                  </dd>
                </dl>
              </div>
            </div>
            <div
              className="modal-footer"
            >
              <Button
                className=""
                loading={false}
                menuData={Array []}
                noSubmit={false}
                onClick={[Function]}
                type="strong"
              >
                <button
                  className="btn btn-strong"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  type="submit"
                >
                  <span>
                    OK
                  </span>
                </button>
              </Button>
            </div>
          </section>
        </div>
        <div
          className="modal-mask"
        />
      </div>
    </Modal>
  </Alert>
</SpecialHandlingAlert>
`;

exports[`shared/components/SpecialHandling/SpecialHandlingAlert component renders fine when no medical permission 1`] = `
<SpecialHandlingAlert
  customerName="Amy Chen"
  generalAlert="general alert content (staff only)"
  medicalAlert="medical alert content"
  medicalAlertShown={false}
  notes="notes content"
  shown={true}
>
  <Alert
    className="special-handling-alert"
    shown={true}
    title={
      <span>
        <i
          className="icon icon-exclamation-triangle"
        />
         Notes for 
        Amy Chen
      </span>
    }
    type="alert"
  >
    <Modal
      className="modal--alert special-handling-alert"
      onClose={[Function]}
      shown={true}
      title={
        <span>
          <i
            className="icon icon-exclamation-triangle"
          />
           Notes for 
          Amy Chen
        </span>
      }
    >
      <div
        className="modal-wrap"
        role="dialog"
      >
        <div
          className="modal is-open modal--alert special-handling-alert"
          onKeyDown={[Function]}
        >
          <section
            className="modal-box"
          >
            <header
              className="modal-header"
            >
              <h3
                className="modal-title"
              >
                <span>
                  <i
                    className="icon icon-exclamation-triangle"
                  />
                   Notes for 
                  Amy Chen
                </span>
              </h3>
              <span
                aria-label="close-dialog"
                className="icon icon-close modal-close"
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex="0"
              />
            </header>
            <div
              className="modal-body"
            >
              <div
                className="special-handling-alert__content"
              >
                <dl>
                  <dt>
                    Notes
                  </dt>
                  <dd>
                    notes content
                  </dd>
                </dl>
                <dl>
                  <dt>
                    General Alert
                    <span>
                      Staff Use Only
                    </span>
                  </dt>
                  <dd>
                    general alert content (staff only)
                  </dd>
                </dl>
              </div>
            </div>
            <div
              className="modal-footer"
            >
              <Button
                className=""
                loading={false}
                menuData={Array []}
                noSubmit={false}
                onClick={[Function]}
                type="strong"
              >
                <button
                  className="btn btn-strong"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  type="submit"
                >
                  <span>
                    OK
                  </span>
                </button>
              </Button>
            </div>
          </section>
        </div>
        <div
          className="modal-mask"
        />
      </div>
    </Modal>
  </Alert>
</SpecialHandlingAlert>
`;
